[package]
name = "jlc"
version = "0.1.0"
description = """ 
jlc is a compiler for Javalette: A fictional programming language
created for the Compiler Construction (TDA283) Chalmers course.
"""
authors = [
    "Joakim Hulthe <hulthe@student.chalmers.se>",
    "Magnus Wamby <wamby@student.chalmers.se>",
]
edition = "2018"

[dependencies]
pest = "*"
pest_derive = "*"
clap = "2.32.0"
colored = "1.7.0"
